# CUAS-MPI

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE.txt  README.md  formatAllSrc.sh
cmake/: FindNetCDF.cmake  FindPETSc.cmake  FindPythonModule.cmake  GoogleTest.cmake.in  ToolchainOptions.cmake  UseBreathe.cmake  cxxopts.cmake  gitversion.cmake  spdlog.cmake  yaml-cpp.cmake
docs/: CMakeLists.txt
docs/Doxygen/: CMakeLists.txt  Doxyfile.in
docs/DoxygenSphinxBreathe/: CMakeLists.txt  Doxyfile.in  authorship.rst  conf.py.in  doxy_mainpage.md  forcing.rst  global.txt  index.rst  installation.rst  manual.rst  references.bib  zzz_references_html.rst
docs/DoxygenSphinxBreathe/code-reference/: classes-and-functions.rst
lib/: CMakeLists.txt
lib/cuascore/: CMakeLists.txt
lib/cuascore/include/: CUASArgs.h  CUASConstants.h  CUASFile.h  CUASKernels.h  CUASModel.h  CUASSetup.h  CUASSolver.h  CUASTimeIntegrator.h  ModelReader.h  NetCDFFile.h  PetscAlgorithms.h  SolutionHandler.h  WaterSource.h  debug.h  fill_matrix_coo.h  helper.h  parseCxxopts.h  physicalConstants.h  savetimestep.h  setup.h  solver.h  specialgradient.h  systemmatrix.h  timeparse.h  timing.h  timparse.h  utilities.h
lib/cuascore/include/Forcing/: BufferedForcing.h  ConstantForcing.h  Forcing.h  MultiForcing.h  ScalarTimeDependentForcing.h  ScalarTimeForcing.h  SteadyForcing.h  TimeDependentForcing.h  TimeForcing.h  setup.h
lib/cuascore/src/: CUASArgs.cpp  CUASFile.cpp  CUASModel.cpp  CUASSetup.cpp  CUASSolver.cpp  ModelReader.cpp  NetCDFFile.cpp  SolutionHandler.cpp  fill_matrix_coo.cpp  parseCxxopts.cpp  setup.cpp  solver.cpp  specialgradient.cpp  systemmatrix.cpp  utilities.cpp
lib/include/: CUASModel.h  PetscGrid.h  PetscMat.h  PetscVec.h  helper.h  parseCxxopts.h  physicalConstants.h
lib/netcdfwrapper/: CMakeLists.txt
lib/netcdfwrapper/src/: NetCDFFile.cpp
lib/petscwrapper/: CMakeLists.txt
lib/petscwrapper/include/: Logger.h  PETScGrid.h  PETScMat.h  PETScMatrix.h  PETScSolver.h  PETScVec.h  PETScVector.h  PetscGrid.h  PetscMat.h  PetscSolver.h  PetscVec.h  fillgrid.h  petscdump.h  petscoptionswrapper.h  petscutil.h  petscwrapperutils.h
lib/petscwrapper/src/: PETScGrid.cpp  PETScMat.cpp  PETScVec.cpp  PetscGrid.cpp  PetscMat.cpp  PetscVec.cpp
lib/src/: CUASModel.cpp  PetscGrid.cpp  PetscMat.cpp  PetscVec.cpp  parseCxxopts.cpp
original-python-src/: IO.py  _version.py  fill_matrix_fast.pyx  helpers.py  main.py  model.py  physical_constants.py  special_gradient.pyx  timeparse.py
test/: CMakeLists.txt
test/cuascore/integration/: CMakeLists.txt  exactCircularSteadySolutionTest.cpp  exactCircularSteadySolutionTest.h  exactPiecewiseConstantSteadySolutionTest.cpp  exactPiecewiseConstantSteadySolutionTest.h  exactSteadySolutionTest.cpp  exactSteadySolutionTest.h  exactTransientSolutionTest.cpp  exactTransientSolutionTest.h  noDataTest.cpp  noDataTest.h  runner.sh
test/cuascore/unit/: BinaryDialationTest.cpp  CMakeLists.txt  CUASArgsTest.cpp  CUASKernelsTest.cpp  GradientTest.cpp  ModelReaderTest.cpp  NetCDFFileTest.cpp  SetupTest.cpp  SolutionHandlerTest.cpp  TimeForcingFromNetcdfTest.cpp  TimeIntegratorTest.cpp  cxxoptsTest.cpp  fillMatrixTest.cpp  fillModel.h  fillNoData.h  fillNoDataTest.cpp  fill_matrix_test.cpp  forcingTest.cpp  helperTest.cpp  initialHeadTest.cpp  initialHeadTest.h  netcdfTest.cpp  noData.cpp  noDataTest.cpp  specialgradientTest.cpp  systemmatrixTest.cpp  systemmatrixTest.h  testconfig.yaml  timeparseTest.cpp  utilitiesTest.cpp
test/example/: CMakeLists.txt  example.cpp  mpiexample.cpp
test/netcdfwrapper/unit/: CMakeLists.txt  NetCDFFileTest.cpp
test/petscwrapper/unit/: CMakeLists.txt  GridTest.cpp  MatTest.cpp  PETScGridTest.cpp  PETScMatTest.cpp  PETScMatrixTest.cpp  PETScSolverTest.cpp  PETScVecTest.cpp  PETScVectorTest.cpp  SolverTest.cpp  VecTest.cpp  fillgridTest.cpp
test/unit/: CMakeLists.txt  GradientTest.cpp  GridTest.cpp  MatTest.cpp  VecTest.cpp  fillModel.h  fill_matrix_test.cpp  helperTest.cpp  noData.cpp
tools/: CMakeLists.txt  main.cpp
utils/: applyClangFormat.sh  applyCmakeFormat.sh  checkClangTidy.sh  checkCmakeFormat.sh  checkFormat.sh
